trying to fix the generate animation problem on mobile, test deploying

--- a/public/styles.css
+++ b/public/styles.css
@@ -575,4 +575,18 @@
     .form_cont{
         margin:18px
     }
+    #generate_txt{
+        margin-right: 1560px;
+        transition: 2s ease;
+    }
+    #loading_txt.loading{
+        margin-right: 200px;
+        margin-left: 180px;
+        transition: 2s ease;
+    }
+    #generate_txt.loading{
+        margin-right:-1560px;
+        letter-spacing: 10ch;
+        transition: 2s ease;
+    }
 }
